# mcising

./: .gitignore  .pre-commit-config.yaml  404.html  CONTRIBUTING.md  Cargo.toml  README.md  ROADMAP.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
.cargo/: config.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
advanced/contributing/: index.html
advanced/performance/: index.html
advanced/physics/: index.html
benchmarks/: compare_peapods.py
docs/: index.md
docs/advanced/: contributing.md  performance.md  physics.md
docs/guide/: cli.md  configuration.md  plotting.md  saving-results.md
docs/reference/: config.md  exceptions.md  io.md  plotting.md  simulation.md
docs/tutorial/: adaptive-mode.md  cluster-algorithms.md  first-simulation.md  frustrated-magnetism.md  lattice-types.md  parallel-execution.md
guide/cli/: index.html
guide/configuration/: index.html
guide/plotting/: index.html
guide/saving-results/: index.html
mcising.egg-info/: PKG-INFO
python/mcising/: __init__.py  _core.pyi  benchmarks.py  cli.py  config.py  constants.py  exceptions.py  io.py  plotting.py  simulation.py
reference/config/: index.html
reference/exceptions/: index.html
reference/io/: index.html
reference/plotting/: index.html
reference/simulation/: index.html
rust/src/: autocorrelation.rs  error.rs  lib.rs  observables.rs  parallel.rs  rng.rs  simulation.rs
rust/src/algorithm/: metropolis.rs  mod.rs  swendsen_wang.rs  wolff.rs
rust/src/lattice/: chain.rs  cubic.rs  honeycomb.rs  mod.rs  square.rs  triangular.rs
search/: search_index.json
site/: 404.html  index.html  objects.inv  sitemap.xml
site/advanced/performance/: index.html
site/advanced/physics/: index.html
site/guide/cli/: index.html
site/guide/configuration/: index.html
site/guide/plotting/: index.html
site/guide/saving-results/: index.html
site/reference/exceptions/: index.html
site/reference/plotting/: index.html
site/reference/simulation/: index.html
site/search/: search_index.json
site/tutorial/adaptive-mode/: index.html
site/tutorial/cluster-algorithms/: index.html
site/tutorial/first-simulation/: index.html
site/tutorial/frustrated-magnetism/: index.html
site/tutorial/lattice-types/: index.html
site/tutorial/parallel-execution/: index.html
tests/: conftest.py  test_chain.py  test_checkpoint.py  test_config.py  test_correlation.py  test_cross_lattice.py  test_cubic.py  test_energy.py  test_honeycomb.py  test_independent.py  test_io.py  test_j3.py  test_lattice.py  test_magnetization.py  test_metropolis.py  test_parallel_tempering.py  test_physics_validation.py  test_simulation.py  test_swendsen_wang.py  test_triangular.py  test_wolff.py
tutorial/adaptive-mode/: index.html
tutorial/cluster-algorithms/: index.html
tutorial/first-simulation/: index.html
tutorial/frustrated-magnetism/: index.html
tutorial/lattice-types/: index.html
tutorial/parallel-execution/: index.html
