[package]
name = "mcising"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "High-performance Ising model Monte Carlo simulation core"

[lib]
name = "_core"
crate-type = ["cdylib"]
path = "rust/src/lib.rs"

[dependencies]
pyo3 = { version = "0.23", features = ["extension-module"] }
numpy = "0.23"
rand = "0.8"
rand_xoshiro = "0.6"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1