[build-system]
requires = ["maturin>=1.7,<2"]
build-backend = "maturin"

[project]
name = "mcising"
version = "0.2.4"
description = "High-performance Ising model Monte Carlo simulation with Rust core"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "Burak Civitcioglu", email = "bcivitcioglu@gmail.com" },
]
keywords = [
    "ising-model",
    "monte-carlo",
    "statistical-mechanics",
    "physics",
    "simulation",
    "frustrated-magnetism",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "h5py>=3.16.0",
    "matplotlib>=3.10.8",
    "numpy>=2.2.6",
    "rich>=14.3.3",
    "typer>=0.24.1",
]

[dependency-groups]
dev = [
    "maturin>=1.12.6",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.8",
]

[project.scripts]
mcising = "mcising.cli:app"

[project.urls]
Homepage = "https://github.com/bcivitcioglu/mcising"
Documentation = "https://bcivitcioglu.github.io/mcising"
Repository = "https://github.com/bcivitcioglu/mcising"
Issues = "https://github.com/bcivitcioglu/mcising/issues"

[tool.maturin]
python-source = "python"
module-name = "mcising._core"
features = ["pyo3/extension-module"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.10"
strict = true

[[tool.mypy.overrides]]
module = ["h5py"]
ignore_missing_imports = true
